--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,31 @@
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
 # Logs
 logs
 *.log
@@ -86,6 +114,7 @@ build/
 
 sign/
 
-source/ReactWX.js
+source/ReactAli.js
 source/ReactBU.js
 source/ReactQuick.js
+source/ReactWX.js
