--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
         "@babel/core": "^7.0.0",
         "@babel/plugin-syntax-jsx": "^7.0.0",
         "@babel/preset-env": "^7.0.0",
+        "babel-eslint": "^10.0.1",
         "babel-loader": "^8.0.0",
         "css-what": "^2.1.0",
+        "eslint": "^5.10.0",
+        "eslint-plugin-react": "^7.11.1",
         "hap-toolkit": "^0.0.38",
         "koa": "^2.3.0",
         "koa-body": "^2.5.0",
