--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-    "license": "MIT",
-    "version": "1.0.0",
-    "name": "shinee-ui",
-    "scripts": {
-        "server": "hap server",
-        "postinstall": "hap postinstall",
-        "debug": "hap debug",
-        "build": "hap build",
-        "release": "hap release",
-        "watch": "hap watch"
-    },
-    "devDependencies": {
-        "hap-toolkit": "^0.1.0",
-        "koa": "^2.3.0",
-        "koa-body": "^2.5.0",
-        "koa-router": "^7.2.1",
-        "koa-send": "^4.1.1",
-        "koa-static": "^4.0.1",
-        "less-loader": "^4.1.0",
-        "node-sass": "^4.9.4",
-        "sass-loader": "^7.1.0",
-        "socket.io": "^2.1.0",
-        "webpack": "^4"
-    }
+  "name": "schnee-ui",
+  "version": "1.0.0",
+  "description": "运用于nanachi的H5，快应用的补丁组件",
+  "main": "index.js",
+  "module": "index.js",
+  "directories": {
+    "doc": "doc"
+  },
+  "dependencies": {},
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/qunarcorp/schnee-ui.git"
+  },
+  "keywords": [
+    "nanachi"
+  ],
+  "author": "Tian Qi",
+  "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/qunarcorp/schnee-ui/issues"
+  },
+  "homepage": "https://github.com/qunarcorp/schnee-ui#readme"
 }
