--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
     "debug": "hap debug",
     "build": "hap build",
     "release": "hap release",
-    "watch": "hap watch"
+    "watch": "hap watch",
+    "eslint": "eslint source",
+    "precommit-msg": "echo 'Pre-commit checks...' && exit 0"
   },
+  "pre-commit": [
+    "precommit-msg",
+    "eslint"
+  ],
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.14.1",
+    "eslint-plugin-react": "^7.12.4",
     "hap-toolkit": "^0.2.0",
     "koa": "^2.3.0",
     "koa-body": "^2.5.0",
@@ -19,6 +28,7 @@
     "koa-static": "^4.0.1",
     "less-loader": "^4.1.0",
     "node-sass": "^4.9.4",
+    "pre-commit": "^1.2.2",
     "sass-loader": "^7.1.0",
     "socket.io": "^2.1.0",
     "webpack": "^4"
