--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "pre-commit": "^1.2.2"
     },
     "dependencies": {
+        "moment": "^2.24.0",
         "schnee-ui": "^1.0.7"
     },
     "nanachi": {
