--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
   "bugs": {
     "url": "https://github.com/qunarcorp/schnee-ui/issues"
   },
-  "homepage": "https://github.com/qunarcorp/schnee-ui#readme"
+  "homepage": "https://github.com/qunarcorp/schnee-ui#readme",
+  "nanachi": {
+    "alias": {
+        "@components": "components",
+        "@common": "common",
+        "@assets": "assets"
+    }
+  }
 }
