--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     ],
     "devDependencies": {
         "babel-eslint": "^10.0.1",
+        "chalk": "^3.0.0",
         "eslint": "^5.14.1",
         "eslint-plugin-hybrid": "0.0.5",
         "eslint-plugin-react": "^7.12.4",
